--- a/prelim1_WORDLW_EDAwerq.ipynb
+++ b/prelim1_WORDLW_EDAwerq.ipynb
@@ -3388,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 198,
    "id": "8eb89bfb-0b55-4fed-9b54-207f6e993622",
    "metadata": {},
    "outputs": [],
@@ -4759,8 +4759,598 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "id": "ce2bf492-ef73-4757-9fc0-661d52c925bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/michaelharnett/opt/anaconda3/envs/metis/lib/python3.8/site-packages/pandas/core/frame.py:3607: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._set_item(key, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "michaelwindf.score = michaelwindf.score.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "5d83cd06-5015-4e8b-a7a7-a4f409f8f4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 40 entries, 3 to 180\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   player    40 non-null     object \n",
+      " 1   game_num  40 non-null     int64  \n",
+      " 2   score     40 non-null     int64  \n",
+      " 3   LOSS      40 non-null     float64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 1.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "michaelwindf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "4c4976a3-82c9-4ec4-8ab4-a91c0c3c63d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>game_num</th>\n",
+       "      <th>score</th>\n",
+       "      <th>LOSS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>279</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>278</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>276</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>271</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>270</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>269</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>268</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>267</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>264</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>263</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>261</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>260</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>259</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>258</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>257</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>256</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>255</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>254</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>253</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>252</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>250</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>249</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>248</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>247</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>246</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>245</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>243</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>242</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>241</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>240</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>239</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>238</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>237</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>236</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>235</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>234</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>233</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>232</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>231</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>230</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      player  game_num  score  LOSS\n",
+       "3    Michael       279      4   0.0\n",
+       "8    Michael       278      5   0.0\n",
+       "16   Michael       276      3   0.0\n",
+       "28   Michael       271      6   0.0\n",
+       "32   Michael       270      4   0.0\n",
+       "36   Michael       269      6   0.0\n",
+       "42   Michael       268      5   0.0\n",
+       "44   Michael       267      5   0.0\n",
+       "55   Michael       264      4   0.0\n",
+       "59   Michael       263      3   0.0\n",
+       "67   Michael       261      4   0.0\n",
+       "73   Michael       260      3   0.0\n",
+       "77   Michael       259      3   0.0\n",
+       "81   Michael       258      6   0.0\n",
+       "84   Michael       257      5   0.0\n",
+       "87   Michael       256      6   0.0\n",
+       "94   Michael       255      3   0.0\n",
+       "96   Michael       254      5   0.0\n",
+       "99   Michael       253      3   0.0\n",
+       "105  Michael       252      5   0.0\n",
+       "111  Michael       250      4   0.0\n",
+       "117  Michael       249      6   0.0\n",
+       "119  Michael       248      3   0.0\n",
+       "123  Michael       247      3   0.0\n",
+       "127  Michael       246      4   0.0\n",
+       "132  Michael       245      5   0.0\n",
+       "139  Michael       243      5   0.0\n",
+       "143  Michael       242      4   0.0\n",
+       "146  Michael       241      6   0.0\n",
+       "151  Michael       240      5   0.0\n",
+       "154  Michael       239      6   0.0\n",
+       "161  Michael       238      4   0.0\n",
+       "163  Michael       237      5   0.0\n",
+       "165  Michael       236      6   0.0\n",
+       "168  Michael       235      5   0.0\n",
+       "172  Michael       234      5   0.0\n",
+       "175  Michael       233      2   0.0\n",
+       "177  Michael       232      5   0.0\n",
+       "179  Michael       231      4   0.0\n",
+       "180  Michael       230      5   0.0"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michaelwindf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "08990f80-d6e2-4f29-9936-e0c83001620f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "180"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michaelwindf.score.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "be872022-79e9-488b-9d85-494db98b8e5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michael_avg = michaelwindf.score.sum()/len(michaelwindf)\n",
+    "michael_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5739baf2-2438-4c88-9f0e-32fe333c7c68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "fe0eb4af-f96e-4a2a-b977-3df62a49761f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/michaelharnett/opt/anaconda3/envs/metis/lib/python3.8/site-packages/pandas/core/frame.py:3607: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._set_item(key, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "michaelwindf.score = michaelwindf.score.astype(int)\n",
+    "michael_avg = michaelwindf.score.sum()/len(michaelwindf)\n",
+    "\n",
+    "daniellewindf.score = daniellewindf.score.astype(int)\n",
+    "danielle_avg = daniellewindf.score.sum()/len(daniellewindf)\n",
+    "\n",
+    "chriswindf.score = chriswindf.score.astype(int)\n",
+    "chris_avg = chriswindf.score.sum()/len(chriswindf)\n",
+    "\n",
+    "dadwindf.score = dadwindf.score.astype(int)\n",
+    "dad_avg = dadwindf.score.sum()/len(dadwindf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "d52c2a5e-acb9-476e-a47f-bb0e8989fba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michael_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "29a10215-4d31-4455-a6c9-e3301cd32e10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.020408163265306"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "danielle_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "5520413e-d7e7-477d-9c88-248a39bb32b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.225"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chris_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "b04da3a2-9493-409c-82d2-e260cd85a071",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.8958333333333335"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dad_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bba3261a-ccaa-4b52-b6bd-8bc06831b7db",
    "metadata": {},
    "outputs": [],
    "source": []
