testing game totals

--- a/prelim1_WORDLW_EDAwerq.ipynb
+++ b/prelim1_WORDLW_EDAwerq.ipynb
@@ -5349,8 +5349,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "id": "bba3261a-ccaa-4b52-b6bd-8bc06831b7db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(michaeldf)-len(michaelwindf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "61967f4b-2434-4c13-b26a-9ba967e4bbba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "michael_totalgamesplayed = len(michaeldf)\n",
+    "michael_winnum = len(michaelwindf)\n",
+    "michael_lossnum = len(michaeldf)-len(michaelwindf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "aff56ce4-f0b9-4d43-82f2-ef4b25eef175",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michael_totalgamesplayed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "ab112473-7d74-4e13-81a8-025fd339086c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michael_winnum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "c6f99828-338a-44b5-9fc3-fe5794d60e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "michael_lossnum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "e06e690f-492b-438c-94d5-249b70b8e4d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "michael_totalgamesplayed = len(michaeldf)\n",
+    "michael_winnum = len(michaelwindf)\n",
+    "michael_lossnum = len(michaeldf)-len(michaelwindf)\n",
+    "\n",
+    "danielle_totalgamesplayed = len(danielledf)\n",
+    "danielle_winnum = len(daniellewindf)\n",
+    "danielle_lossnum = len(danielledf)-len(daniellewindf)\n",
+    "\n",
+    "chris_totalgamesplayed = len(chrisdf)\n",
+    "chris_winnum = len(chriswindf)\n",
+    "chris_lossnum = len(chrisdf)-len(chriswindf)\n",
+    "\n",
+    "dad_totalgamesplayed = len(daddf)\n",
+    "dad_winnum = len(dadwindf)\n",
+    "dad_lossnum = len(daddf)-len(dadwindf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "731bc8ca-dd72-4df4-b96f-bc652dcd0098",
    "metadata": {},
    "outputs": [],
    "source": []
