adding missing games

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -2,8 +2,386 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1f539468-9760-4cff-9503-7037c8b2db21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dfa4b441-08f1-4222-bd9e-42bfffa7c014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dan_test = pd.read_csv('tables/danielledf.csv')\n",
+    "dad_test = pd.read_csv('tables/daddf.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "34801fa8-b553-4dc1-b876-8e1fdccb95a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dan_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c8115df2-078c-4a20-b4ed-3fb4b2b241d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dad_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a975848d-bd98-46cf-84ee-75e3fc8ac5a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[301,\n",
+       " 300,\n",
+       " 299,\n",
+       " 298,\n",
+       " 297,\n",
+       " 296,\n",
+       " 295,\n",
+       " 294,\n",
+       " 293,\n",
+       " 292,\n",
+       " 291,\n",
+       " 290,\n",
+       " 289,\n",
+       " 288,\n",
+       " 287,\n",
+       " 286,\n",
+       " 285,\n",
+       " 284,\n",
+       " 283,\n",
+       " 282,\n",
+       " 281,\n",
+       " 280,\n",
+       " 279,\n",
+       " 278,\n",
+       " 277,\n",
+       " 276,\n",
+       " 274,\n",
+       " 273,\n",
+       " 272,\n",
+       " 271,\n",
+       " 270,\n",
+       " 269,\n",
+       " 268,\n",
+       " 267,\n",
+       " 266,\n",
+       " 265,\n",
+       " 264,\n",
+       " 263,\n",
+       " 262,\n",
+       " 261,\n",
+       " 260,\n",
+       " 259,\n",
+       " 258,\n",
+       " 257,\n",
+       " 256,\n",
+       " 255,\n",
+       " 254,\n",
+       " 253,\n",
+       " 252,\n",
+       " 251,\n",
+       " 250,\n",
+       " 249,\n",
+       " 248,\n",
+       " 247,\n",
+       " 246,\n",
+       " 245,\n",
+       " 244,\n",
+       " 243,\n",
+       " 242,\n",
+       " 241,\n",
+       " 240,\n",
+       " 239,\n",
+       " 238,\n",
+       " 237,\n",
+       " 236,\n",
+       " 235,\n",
+       " 234,\n",
+       " 233,\n",
+       " 232,\n",
+       " 231,\n",
+       " 230]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(dan_test.game_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "64cc1759-94ad-4714-9610-3cec3afd9b96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamelist = sorted(list(dad_test.game_num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "41484f36-1e66-411f-9a7c-1a973ba3bac1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[231, 232, 236, 284]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lastnum = []\n",
+    "# i=0\n",
+    "# for nums in gamelist:\n",
+    "#     if i>1:\n",
+    "#         if nums-1 != nums[i-1]:\n",
+    "#             print(nums)\n",
+    "#     i += 1 \n",
+    "    \n",
+    "# lastnum = []\n",
+    "# i=0\n",
+    "# for nums in gamelist:\n",
+    "#     if i>=1:\n",
+    "#         print(nums)\n",
+    "#     i +=1\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "missing_elemnts = [item for item in range(gamelist[0], gamelist[-1]+1) if item not in gamelist]\n",
+    "print(missing_elemnts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "327ecb62-adc1-4d9a-948d-1b0395401757",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[230,\n",
+       " 233,\n",
+       " 234,\n",
+       " 235,\n",
+       " 237,\n",
+       " 238,\n",
+       " 239,\n",
+       " 240,\n",
+       " 241,\n",
+       " 242,\n",
+       " 243,\n",
+       " 244,\n",
+       " 245,\n",
+       " 246,\n",
+       " 247,\n",
+       " 248,\n",
+       " 249,\n",
+       " 250,\n",
+       " 251,\n",
+       " 252,\n",
+       " 253,\n",
+       " 254,\n",
+       " 255,\n",
+       " 256,\n",
+       " 257,\n",
+       " 258,\n",
+       " 259,\n",
+       " 260,\n",
+       " 261,\n",
+       " 262,\n",
+       " 263,\n",
+       " 264,\n",
+       " 265,\n",
+       " 266,\n",
+       " 267,\n",
+       " 268,\n",
+       " 269,\n",
+       " 270,\n",
+       " 271,\n",
+       " 272,\n",
+       " 273,\n",
+       " 274,\n",
+       " 275,\n",
+       " 276,\n",
+       " 277,\n",
+       " 278,\n",
+       " 279,\n",
+       " 280,\n",
+       " 281,\n",
+       " 282,\n",
+       " 283,\n",
+       " 285,\n",
+       " 286,\n",
+       " 287,\n",
+       " 288,\n",
+       " 289,\n",
+       " 290,\n",
+       " 291,\n",
+       " 292,\n",
+       " 293,\n",
+       " 294,\n",
+       " 295,\n",
+       " 296,\n",
+       " 297,\n",
+       " 298,\n",
+       " 299,\n",
+       " 300,\n",
+       " 301]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gamelist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f9669fe1-1924-47d0-b322-b5552a909f85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "michaeldf = pd.read_csv('tables/michaeldf.csv')\n",
+    "danielledf = pd.read_csv('tables/danielledf.csv')\n",
+    "chrisdf = pd.read_csv('tables/chrisdf.csv')\n",
+    "daddf = pd.read_csv('tables/daddf.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4f4b3400-2edd-4c05-8e87-a3ab1a8c5b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "michael_games = sorted(michaeldf.game_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9898ffcc-aa55-4c5a-884c-aceda54ac93c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[244, 266, 272, 273, 274, 275, 281, 287, 288, 289, 292, 295, 296, 297]\n"
+     ]
+    }
+   ],
+   "source": [
+    "michael_missing = [item for item in range(michael_games[0], michael_games[-1]+1) if item not in michael_games]\n",
+    "print(michael_missing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7d28fca9-5105-48c0-a175-3883a338f00c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "michael_games = sorted(michaeldf.game_num)\n",
+    "michael_missing = [item for item in range(michael_games[0], michael_games[-1]+1) if item not in michael_games]\n",
+    "\n",
+    "\n",
+    "danielle_games = sorted(danielledf.game_num)\n",
+    "danielle_missing = [item for item in range(danielle_games[0], danielle_games[-1]+1) if item not in danielle_games]\n",
+    "\n",
+    "\n",
+    "chris_games = sorted(chrisdf.game_num)\n",
+    "chris_missing = [item for item in range(chris_games[0], chris_games[-1]+1) if item not in chris_games]\n",
+    "\n",
+    "\n",
+    "dad_games = sorted(daddf.game_num)\n",
+    "dad_missing = [item for item in range(dad_games[0], dad_games[-1]+1) if item not in dad_games]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "279d4d7d-1b8e-4c63-8216-19278d1a3a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Michael's missing games: [244, 266, 272, 273, 274, 275, 281, 287, 288, 289, 292, 295, 296, 297]\n",
+      "Danielle's missing games: [275]\n",
+      "Chris' missing games: [268, 272, 275]\n",
+      "Dad's missing games: [231, 232, 236, 284]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Michael\\'s missing games: {michael_missing}')\n",
+    "print(f'Danielle\\'s missing games: {danielle_missing}')\n",
+    "print(f'Chris\\' missing games: {chris_missing}')\n",
+    "print(f'Dad\\'s missing games: {dad_missing}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "101b33aa-8beb-4aba-a0f2-a3e45576550b",
    "metadata": {},
    "outputs": [],
    "source": []
