--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 158,
    "id": "6600fc63-d98d-41ed-98fe-1c09c5f0ece4",
    "metadata": {},
    "outputs": [],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 159,
    "id": "a25dd653-9aee-47a1-9eb1-9912c35d1619",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
        "<BarContainer object of 6 artists>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 160,
    "id": "d3155c31-e49e-49b9-b883-e143f340c032",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 161,
    "id": "e7153e61-1b32-4195-8678-2fe088328db5",
    "metadata": {},
    "outputs": [
@@ -804,13 +804,13 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "danielle_guesschart.figure"
+    "michael.gue"
    ]
   },
   {
