changing x range to integers

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_range = ['1','2','3','4','5','6']\n"
+    "x_range = [1, 2,'3','4','5','6']\n"
    ]
   },
   {
@@ -837,8 +837,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "97d2261f-825a-48ba-bd7c-89885a595bbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x_range[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "e16dbbd4-c8db-4c69-b3b8-5aafd22e58a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(danielle_guesscount[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e1a598-bae4-4cbe-8a51-f2184ff99f51",
    "metadata": {},
    "outputs": [],
    "source": []
