fixing dads graph

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -3110,8 +3110,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "id": "d1bd3ebb-a7d8-44b1-a474-a33ebbc80d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 68 entries, 0 to 67\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   player    68 non-null     object \n",
+      " 1   game_num  68 non-null     int64  \n",
+      " 2   score     68 non-null     int64  \n",
+      " 3   LOSS      68 non-null     float64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 2.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "daddf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "0d441730-c431-4756-adb5-00e7de7ce64f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daddf.score = daddf.score.astype('str')\n",
+    "dad1wins = len(daddf[daddf.score == '1'])\n",
+    "dad2wins = len(daddf[daddf.score == '2'])\n",
+    "dad3wins = len(daddf[daddf.score == '3'])\n",
+    "dad4wins = len(daddf[daddf.score == '4'])\n",
+    "dad5wins = len(daddf[daddf.score == '5'])\n",
+    "dad6wins = len(daddf[daddf.score == '6'])\n",
+    "dad_guesscount = []\n",
+    "dad_guesscount.append(dad1wins)\n",
+    "dad_guesscount.append(dad2wins)\n",
+    "dad_guesscount.append(dad3wins)\n",
+    "dad_guesscount.append(dad4wins)\n",
+    "dad_guesscount.append(dad5wins)\n",
+    "dad_guesscount.append(dad6wins)\n",
+    "dad_guesscount = dad_guesscount[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "9636f9db-f116-4e30-9703-56d89038217d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 16, 27, 16, 4, 0]"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dad_guesscount\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "25df17d4-7146-4d85-a654-aafd3bf68e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 57 entries, 0 to 56\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   player    57 non-null     object \n",
+      " 1   game_num  57 non-null     int64  \n",
+      " 2   score     57 non-null     object \n",
+      " 3   LOSS      57 non-null     float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 1.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "michaeldf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "002df3b4-7f07-4008-b0c3-19e407fd0620",
    "metadata": {},
    "outputs": [],
    "source": []
