--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -3211,8 +3211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "id": "002df3b4-7f07-4008-b0c3-19e407fd0620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daddf = pd.read_csv('tables/daddf.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f781e4-7cb3-4ba0-9dcb-b171158a845e",
    "metadata": {},
    "outputs": [],
    "source": []
