readding labels to savages.py I removed....forgot they are seperate file

--- a/saveges_texfinding.ipynb
+++ b/saveges_texfinding.ipynb
@@ -1604,8 +1604,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "b6be06ce-5055-4182-bd26-b5b492858701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    guess_range = ['6', '5', '4', '3', '2', '1']\n",
+    "\n",
+    "    #michael\n",
+    "    michaelSAVdf.score = michaelSAVdf.score.astype('str')\n",
+    "    michaelSAV1wins = len(michaelSAVdf[michaelSAVdf.score == '1'])\n",
+    "    michaelSAV2wins = len(michaelSAVdf[michaelSAVdf.score == '2'])\n",
+    "    michaelSAV3wins = len(michaelSAVdf[michaelSAVdf.score == '3'])\n",
+    "    michaelSAV4wins = len(michaelSAVdf[michaelSAVdf.score == '4'])\n",
+    "    michaelSAV5wins = len(michaelSAVdf[michaelSAVdf.score == '5'])\n",
+    "    michaelSAV6wins = len(michaelSAVdf[michaelSAVdf.score == '6'])\n",
+    "    michaelSAV_guesscount = []\n",
+    "    michaelSAV_guesscount.append(michaelSAV1wins)\n",
+    "    michaelSAV_guesscount.append(michaelSAV2wins)\n",
+    "    michaelSAV_guesscount.append(michaelSAV3wins)\n",
+    "    michaelSAV_guesscount.append(michaelSAV4wins)\n",
+    "    michaelSAV_guesscount.append(michaelSAV5wins)\n",
+    "    michaelSAV_guesscount.append(michaelSAV6wins)\n",
+    "    michaelSAV_guesscount = michaelSAV_guesscount[::-1]\n",
+    "\n",
+    "    #kell\n",
+    "    kelldf.score = kelldf.score.astype('str')\n",
+    "    kell1wins = len(kelldf[kelldf.score == '1'])\n",
+    "    kell2wins = len(kelldf[kelldf.score == '2'])\n",
+    "    kell3wins = len(kelldf[kelldf.score == '3'])\n",
+    "    kell4wins = len(kelldf[kelldf.score == '4'])\n",
+    "    kell5wins = len(kelldf[kelldf.score == '5'])\n",
+    "    kell6wins = len(kelldf[kelldf.score == '6'])\n",
+    "    kell_guesscount = []\n",
+    "    kell_guesscount.append(kell1wins)\n",
+    "    kell_guesscount.append(kell2wins)\n",
+    "    kell_guesscount.append(kell3wins)\n",
+    "    kell_guesscount.append(kell4wins)\n",
+    "    kell_guesscount.append(kell5wins)\n",
+    "    kell_guesscount.append(kell6wins)\n",
+    "    kell_guesscount = kell_guesscount[::-1]\n",
+    "\n",
+    "\n",
+    "    #nick\n",
+    "    nickdf.score = nickdf.score.astype('str')\n",
+    "    nick1wins = len(nickdf[nickdf.score == '1'])\n",
+    "    nick2wins = len(nickdf[nickdf.score == '2'])\n",
+    "    nick3wins = len(nickdf[nickdf.score == '3'])\n",
+    "    nick4wins = len(nickdf[nickdf.score == '4'])\n",
+    "    nick5wins = len(nickdf[nickdf.score == '5'])\n",
+    "    nick6wins = len(nickdf[nickdf.score == '6'])\n",
+    "    nick_guesscount = []\n",
+    "    nick_guesscount.append(nick1wins)\n",
+    "    nick_guesscount.append(nick2wins)\n",
+    "    nick_guesscount.append(nick3wins)\n",
+    "    nick_guesscount.append(nick4wins)\n",
+    "    nick_guesscount.append(nick5wins)\n",
+    "    nick_guesscount.append(nick6wins)\n",
+    "    nick_guesscount = nick_guesscount[::-1]\n",
+    "\n",
+    "\n",
+    "    #jose\n",
+    "    josedf.score = josedf.score.astype('str')\n",
+    "    jose1wins = len(josedf[josedf.score == '1'])\n",
+    "    jose2wins = len(josedf[josedf.score == '2'])\n",
+    "    jose3wins = len(josedf[josedf.score == '3'])\n",
+    "    jose4wins = len(josedf[josedf.score == '4'])\n",
+    "    jose5wins = len(josedf[josedf.score == '5'])\n",
+    "    jose6wins = len(josedf[josedf.score == '6'])\n",
+    "    jose_guesscount = []\n",
+    "    jose_guesscount.append(jose1wins)\n",
+    "    jose_guesscount.append(jose2wins)\n",
+    "    jose_guesscount.append(jose3wins)\n",
+    "    jose_guesscount.append(jose4wins)\n",
+    "    jose_guesscount.append(jose5wins)\n",
+    "    jose_guesscount.append(jose6wins)\n",
+    "    jose_guesscount = jose_guesscount[::-1]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "bdfc99e7-9e29-4ea1-802f-2ea1841e7d4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jose_guesscount2 = (jose_guesscount[::-1])\n",
+    "jose_guesscount2.insert(0, 'HOEsay')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a899686f-3e8d-4ad5-b1d1-4d745a0dedd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['HOEsay', 0, 3, 13, 17, 10, 5]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jose_guesscount2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "3b29f1aa-9a73-41cc-90b3-f3190db8c072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "michaelSAV_guesscount2 = (michaelSAV_guesscount[::-1])\n",
+    "michaelSAV_guesscount2.insert(0, 'Michael Michaelson')\n",
+    "\n",
+    "kell_guesscount2 = (kell_guesscount[::-1])\n",
+    "kell_guesscount2.insert(0, 'Killa Kells')\n",
+    "\n",
+    "nick_guesscount2 = (nick_guesscount[::-1])\n",
+    "nick_guesscount2.insert(0, 'Nick Cosby')\n",
+    "\n",
+    "jose_guesscount2 = (jose_guesscount[::-1])\n",
+    "jose_guesscount2.insert(0, 'HOEsay')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f71cc9a7-4af5-4585-96e2-7d54b6dda222",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'grouped_xlabels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/xl/ftndz_9j3hn5ybffb6t5q42m0000gn/T/ipykernel_5989/2865693145.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m                            \u001b[0;34m(\u001b[0m\u001b[0mkell_guesscount2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                            \u001b[0;34m(\u001b[0m\u001b[0mnick_guesscount2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                            (jose_guesscount2)], columns = grouped_xlabels)\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'grouped_xlabels' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sav_windf = pd.DataFrame([(michaelSAV_guesscount2),\n",
+    "                           (kell_guesscount2),\n",
+    "                           (nick_guesscount2),\n",
+    "                           (jose_guesscount2)], columns = grouped_xlabels)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95e98ce8-68d8-406f-b4c9-7cffed268358",
    "metadata": {},
    "outputs": [],
    "source": []
